vnl scanner updates

--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,9 @@
         <div class="project-image">
             <img src="images/project1.png" alt="Project 1" />
         </div>
+        <div class="project-status">
+            <span class="status-badge success">Published</span>
+        </div>
         <div class="project-content">
             <h3 class="project-title">DHARMA</h3>
             <p class="project-desc">Web Security Awareness' provides interactive learning on common web vulnerabilities, including SQL Injection and
@@ -97,6 +100,9 @@
         <div class="project-image">
             <img src="images/project2.png" alt="Project 2" />
         </div>
+        <div class="project-status">
+                <span class="status-badge success">Published</span>
+            </div>
         <div class="project-content">
             <h3 class="project-title">Tech Forge</h3>
             <p class="project-desc">I served as the Tech Head and Lead Developer for TechForge 2025, a prestigious national-level hackathon.
@@ -160,6 +166,9 @@
         <div class="project-image">
             <img src="images/netanalyser.png" alt="NetAnalyser" />
         </div>
+        <div class="project-status">
+            <span class="status-badge success">Published</span>
+        </div>
         <div class="project-content">
             <h3 class="project-title">NetAnalyser</h3>
             <p class="project-desc">A sophisticated web application that conducts comprehensive internet speed analysis
@@ -193,6 +202,50 @@
                     <i class="fas fa-code"></i> Source Code
                 </a>
                 <a href="https://netanalyser.vercel.app" class="project-link">
+                    <i class="fas fa-external-link-alt"></i> Live Demo
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="project-card">
+        <div class="project-image">
+            <img src="images/project4.png" alt="VNLScanner" />
+            <div class="project-status">
+                <span class="status-badge success">Published</span>
+            </div>
+        </div>
+        <div class="project-content">
+            <h3 class="project-title">VNLScanner</h3>
+            <p class="project-desc">VNL Scanner helps you identify security issues in websites with our advanced simulation
+            technology. Protect your digital assets with comprehensive security analysis. The platform leverages custom-trained
+            methodologies to detect vulnerabilities through sophisticated scanning techniques, designed specifically for
+            educational purposes and web security research.</p>
+
+            <div class="project-tags">
+                <span class="project-tag">React</span>
+                <span class="project-tag">TypeScript</span>
+                <span class="project-tag">Security</span>
+                <span class="project-tag">AI Analysis</span>
+            </div>
+
+            <div class="project-features">
+                <div class="feature-item">
+                    <i class="fas fa-shield-alt"></i>
+                    <span>Vulnerability Detection</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-code-branch"></i>
+                    <span>Custom Methodology</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-chart-line"></i>
+                    <span>Advanced Analysis</span>
+                </div>
+            </div>
+
+            <div class="project-links">
+                <a href="https://vnlscanner.vercel.app/" class="project-link">
                     <i class="fas fa-external-link-alt"></i> Live Demo
                 </a>
             </div>
