new project update

--- a/projects.html
+++ b/projects.html
@@ -251,6 +251,50 @@
             </div>
         </div>
     </div>
+
+    <div class="project-card">
+        <div class="project-image">
+            <img src="images/project5.png" alt="CodeUnwanted" />
+            <div class="project-status">
+                <span class="status-badge success">Published</span>
+            </div>
+        </div>
+        <div class="project-content">
+            <h3 class="project-title">CodeUnwanted</h3>
+            <p class="project-desc">CodeUnwanted provides state-of-the-art encoding and decoding tools for security professionals,
+            developers, and cryptography enthusiasts. Our platform offers a comprehensive suite of tools designed with cybersecurity
+            in mind. The application empowers users with advanced cryptographic capabilities while maintaining an intuitive interface
+            for both beginners and experts.</p>
+
+            <div class="project-tags">
+                <span class="project-tag">Cryptography</span>
+                <span class="project-tag">Security</span>
+                <span class="project-tag">Encoding</span>
+                <span class="project-tag">Decoding</span>
+            </div>
+
+            <div class="project-features">
+                <div class="feature-item">
+                    <i class="fas fa-lock"></i>
+                    <span>Advanced Encryption</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-exchange-alt"></i>
+                    <span>Encoding/Decoding</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-shield-alt"></i>
+                    <span>Security Tools</span>
+                </div>
+            </div>
+
+            <div class="project-links">
+                <a href="https://codeunwanted.vercel.app/" class="project-link">
+                    <i class="fas fa-external-link-alt"></i> Live Demo
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
 </section>
