--- a/projects.html
+++ b/projects.html
@@ -295,6 +295,51 @@
             </div>
         </div>
     </div>
+
+    <div class="project-card">
+        <div class="project-image">
+            <img src="images/project6.png" alt="AgeInsight" />
+            <div class="project-status">
+                <span class="status-badge success">Published</span>
+            </div>
+        </div>
+        <div class="project-content">
+            <h3 class="project-title">AgeInsight</h3>
+            <p class="project-desc">AgeInsight is a comprehensive platform that goes beyond basic age calculation,
+            offering personalized recommendations based on age groups. The application provides precise age calculations
+            and tailored suggestions for different life stages, from early childhood development to adult documentation needs.
+            Built with modern web technologies, it delivers an intuitive user experience with real-time calculations and
+            smart recommendations.</p>
+
+            <div class="project-tags">
+                <span class="project-tag">React</span>
+                <span class="project-tag">Age Analysis</span>
+                <span class="project-tag">Recommendations</span>
+                <span class="project-tag">Life Planning</span>
+            </div>
+
+            <div class="project-features">
+                <div class="feature-item">
+                    <i class="fas fa-calculator"></i>
+                    <span>Precise Age Calculation</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-list-alt"></i>
+                    <span>Smart Recommendations</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-user-clock"></i>
+                    <span>Life Stage Guidance</span>
+                </div>
+            </div>
+
+            <div class="project-links">
+                <a href="https://ageinsight.vercel.app/" class="project-link">
+                    <i class="fas fa-external-link-alt"></i> Live Demo
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
 </section>
