live demo to live links

--- a/projects.html
+++ b/projects.html
@@ -202,7 +202,7 @@
                     <i class="fas fa-code"></i> Source Code
                 </a>
                 <a href="https://netanalyser.vercel.app" class="project-link">
-                    <i class="fas fa-external-link-alt"></i> Live Demo
+                    <i class="fas fa-external-link-alt"></i> Live Link
                 </a>
             </div>
         </div>
