live demo change to live links

--- a/projects.html
+++ b/projects.html
@@ -156,7 +156,7 @@
                     <i class="fas fa-code"></i> Source Code
                 </a>
                 <a href="https://urcaster.netlify.app/" class="project-link">
-                    <i class="fas fa-external-link-alt"></i> Live Demo
+                    <i class="fas fa-external-link-alt"></i> Live Link
                 </a>
             </div>
         </div>
@@ -246,7 +246,7 @@
 
             <div class="project-links">
                 <a href="https://vnlscanner.vercel.app/" class="project-link">
-                    <i class="fas fa-external-link-alt"></i> Live Demo
+                    <i class="fas fa-external-link-alt"></i> Live Link
                 </a>
             </div>
         </div>
@@ -290,7 +290,7 @@
 
             <div class="project-links">
                 <a href="https://codeunwanted.vercel.app/" class="project-link">
-                    <i class="fas fa-external-link-alt"></i> Live Demo
+                    <i class="fas fa-external-link-alt"></i> Live link
                 </a>
             </div>
         </div>
@@ -335,7 +335,7 @@
 
             <div class="project-links">
                 <a href="https://ageinsight.vercel.app/" class="project-link">
-                    <i class="fas fa-external-link-alt"></i> Live Demo
+                    <i class="fas fa-external-link-alt"></i> Live Link
                 </a>
             </div>
         </div>
