new project cyberurlscanner

--- a/projects.html
+++ b/projects.html
@@ -340,6 +340,56 @@
             </div>
         </div>
     </div>
+
+    <div class="project-card">
+        <div class="project-image">
+            <img src="images/project7.png" alt="CyberURLScanner" />
+            <div class="project-status">
+                <span class="status-badge success">Published</span>
+            </div>
+        </div>
+        <div class="project-content">
+            <h3 class="project-title">CyberURLScanner</h3>
+            <p class="project-desc">Detect Cyber Threats with our advanced cybersecurity scanner.
+            Scan any URL for phishing, malware, and other online threats. Stay protected in the digital world with
+            comprehensive threat detection and real-time protection.</p>
+
+            <div class="project-tags">
+                <span class="project-tag">Cybersecurity</span>
+                <span class="project-tag">URL Scanner</span>
+                <span class="project-tag">Threat Detection</span>
+                <span class="project-tag">Real-time</span>
+            </div>
+
+            <div class="project-features">
+                <div class="feature-item">
+                    <i class="fas fa-shield-virus"></i>
+                    <span>Phishing Detection</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-bug"></i>
+                    <span>Malware Analysis</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-clock"></i>
+                    <span>Real-time Protection</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-globe-shield"></i>
+                    <span>Safe Browsing</span>
+                </div>
+            </div>
+
+            <div class="project-links">
+                <a href="https://cyberurlscanner.vercel.app/" class="project-link">
+                    <i class="fas fa-external-link-alt"></i> Live Link
+                </a>
+                <a href="https://somesh.social" class="project-link">
+                    <i class="fas fa-user"></i> Contact Developer
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
 </section>
