new project update

--- a/projects.html
+++ b/projects.html
@@ -390,6 +390,54 @@
             </div>
         </div>
     </div>
+
+    <div class="project-card">
+        <div class="project-image">
+            <img src="images/project8.png" alt="Biriyani Paradise" />
+            <div class="project-status">
+                <span class="status-badge success">Published</span>
+            </div>
+        </div>
+        <div class="project-content">
+            <h3 class="project-title">Biriyani Paradise</h3>
+            <p class="project-desc">Biriyani Paradise is dedicated to preserving and sharing the rich traditions of biriyani
+            from across the Indian subcontinent. Founded in 2025, our platform provides detailed instructions, expert tips,
+            and authentic recipes documented through extensive research across India. Each recipe is thoroughly tested and
+            presented with clear step-by-step guidance and high-quality photography.</p>
+
+            <div class="project-tags">
+                <span class="project-tag">Food</span>
+                <span class="project-tag">Recipes</span>
+                <span class="project-tag">Culture</span>
+                <span class="project-tag">Tradition</span>
+            </div>
+
+            <div class="project-features">
+                <div class="feature-item">
+                    <i class="fas fa-utensils"></i>
+                    <span>Authentic Recipes</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-book-open"></i>
+                    <span>Expert Tips</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-camera"></i>
+                    <span>Visual Guides</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-map-marked-alt"></i>
+                    <span>Regional Varieties</span>
+                </div>
+            </div>
+
+            <div class="project-links">
+                <a href="https://biriyaniparadise.vercel.app/" class="project-link">
+                    <i class="fas fa-external-link-alt"></i> Live Link
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
 </section>
