--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,22 @@
         </div>
     </header>
 
+    <!-- Add this after your header -->
+    <div class="user-profile">
+        <div class="profile-card">
+            <div class="profile-header">
+                <img id="userPhoto" src="" alt="Profile Photo" class="profile-photo">
+                <div class="profile-info">
+                    <h3 id="userName" class="profile-name"></h3>
+                    <p id="userEmail" class="profile-email"></p>
+                </div>
+            </div>
+            <button id="signOut" class="sign-out-btn">
+                <i class="fas fa-sign-out-alt"></i> Sign Out
+            </button>
+        </div>
+    </div>
+
     <nav class="nav-menu">
         <ul class="nav-items">
             <li class="nav-item"><a href="index.html#home" class="nav-link">Home</a></li>
@@ -463,5 +479,24 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script type="module">
+        // Add this after your Firebase initialization
+        document.addEventListener('DOMContentLoaded', () => {
+            const userProfile = JSON.parse(localStorage.getItem('userProfile'));
+
+            if (userProfile) {
+                document.getElementById('userPhoto').src = userProfile.photoURL || 'path/to/default-avatar.png';
+                document.getElementById('userName').textContent = userProfile.displayName;
+                document.getElementById('userEmail').textContent = userProfile.email;
+            } else {
+                window.location.href = 'auth.html';
+            }
+
+            document.getElementById('signOut').addEventListener('click', () => {
+                localStorage.removeItem('userProfile');
+                window.location.href = 'auth.html';
+            });
+        });
+    </script>
 </body>
 </html>
