--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
             <a href="#" class="logo">
                 <span>S</span>anu<div class="hacker">Hacker</div>
             </a>
-            <!-- <div class="header-right">
-                <a href="profile.html" class="profile-icon">
-                    <i class="fas fa-user-circle"></i>
-                </a> -->
+            <div class="header-right">
+                <a href="https://github.com/ei-sanu/vnlscanner.git" class="github-star-btn" target="_blank">
+                    <i class="fab fa-github"></i>
+                    <span>Star on GitHub</span>
+                </a>
                 <div class="hamburger">
                     <span></span>
                     <span></span>
