--- a/projects.html
+++ b/projects.html
@@ -454,6 +454,92 @@
             </div>
         </div>
     </div>
+
+    <div class="project-card">
+        <div class="project-image">
+            <img src="images/project10.png" alt="CyberCode Editor" />
+            <div class="project-status">
+                <span class="status-badge success">Published</span>
+            </div>
+        </div>
+        <div class="project-content">
+            <h3 class="project-title">CyberCode Editor</h3>
+            <p class="project-desc">A cutting-edge code editor with cyberpunk aesthetics, offering real-time HTML, CSS,
+            and JavaScript editing capabilities. Built for the modern web developer, it features instant preview updates,
+            a secure sandboxed environment, and lightning-fast performance.</p>
+
+            <div class="project-tags">
+                <span class="project-tag">Code Editor</span>
+                <span class="project-tag">Web Development</span>
+                <span class="project-tag">Cyberpunk</span>
+                <span class="project-tag">Real-time</span>
+            </div>
+
+            <div class="project-features">
+                <div class="feature-item">
+                    <i class="fas fa-code"></i>
+                    <span>Live Editing</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-bolt"></i>
+                    <span>Fast Performance</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-shield-alt"></i>
+                    <span>Secure Environment</span>
+                </div>
+            </div>
+
+            <div class="project-links">
+                <a href="https://cybercodeeditor.vercel.app/" class="project-link">
+                    <i class="fas fa-external-link-alt"></i> Live Link
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="project-card">
+        <div class="project-image">
+            <img src="images/project11.png" alt="CyberPoster AW" />
+            <div class="project-status">
+                <span class="status-badge success">Published</span>
+            </div>
+        </div>
+        <div class="project-content">
+            <h3 class="project-title">CyberPoster AW</h3>
+            <p class="project-desc">A professional platform for creating cybersecurity awareness posters. Features an
+            intuitive drag-and-drop interface, security-themed icons, and high-quality export options. Perfect for
+            organizations looking to enhance their security awareness programs.</p>
+
+            <div class="project-tags">
+                <span class="project-tag">Security Awareness</span>
+                <span class="project-tag">Design Tool</span>
+                <span class="project-tag">Poster Creator</span>
+                <span class="project-tag">Educational</span>
+            </div>
+
+            <div class="project-features">
+                <div class="feature-item">
+                    <i class="fas fa-paint-brush"></i>
+                    <span>Easy Design</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-download"></i>
+                    <span>High-Quality Export</span>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-share-alt"></i>
+                    <span>Easy Sharing</span>
+                </div>
+            </div>
+
+            <div class="project-links">
+                <a href="https://cyberposteraw.vercel.app/" class="project-link">
+                    <i class="fas fa-external-link-alt"></i> Live Link
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
 </section>
