--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
                     <p id="userEmail" class="profile-email"></p>
                     <p class="profile-joined">
                         <i class="fas fa-calendar-alt"></i>
-                        Joined <span id="joinedDate"></span>
+                        Last Login <span id="joinedDate"></span>
                     </p>
                 </div>
             </div>
