--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                     <a href="https://x.com/SomeshR82674271" class="social-link"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.linkedin.com/in/somesh-biswal-b73576320?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link"><i class="fab fa-linkedin-in"></i></a>
                     <a href="https://github.com/ei-sanu" class="social-link"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/_saanuuuu___/" class="social-link"><i class="fab fa-instagram"></i></a>
                 </div>
                 <div class="footer-links">
                     <a href="#home" class="footer-link">Home</a>
