--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <header>
         <div class="header-content">
             <a href="#" class="logo">
-                <span>S</span>anu<div class="hacker">Hacker</div>
+                <span>S</span>anu<div class="hacker">CyberSecurity Enthusiast</div>
             </a>
             <div class="header-right">
                 <a href="assets/someshformatedcv.pdf" class="cv-button" target="_blank">
