buy me a coffee

--- a/index.html
+++ b/index.html
@@ -430,6 +430,21 @@
         </div>
     </section>
 
+    <section class="coffee-section">
+        <div class="container">
+            <div class="coffee-content">
+                <div class="coffee-text-content">
+                    <h2>Support My Work</h2>
+                    <p>If you find my work helpful, consider buying me a coffee to keep me energized!</p>
+                </div>
+                <a href="https://buymeacoffee.com/someshranjv" class="coffee-button" target="_blank">
+                    <i class="fas fa-coffee"></i>
+                    <span>Buy me a coffee</span>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <div class="container">
             <div class="footer-content">
