new project adddition

--- a/projects.html
+++ b/projects.html
@@ -142,6 +142,50 @@
         </div>
     </div>
 
+
+<div class="project-card">
+    <div class="project-image">
+        <img src="images/trackmytrek.png" alt="track my trek" />
+        <div class="project-status">
+            <span class="status-badge success">Published</span>
+        </div>
+    </div>
+    <div class="project-content">
+        <h3 class="project-title">Track My Trek</h3>
+        <p class="project-desc">We aim to democratize career guidance by providing resources, roadmaps, and assessments across 30+ technology domains.
+        With 150+ skill assessments and personalized recommendations, learners can track their progress effectively. The
+        platform also offers 450+ practical project ideas to help users build strong portfolios with real-world, hands-on
+        experience.</p>
+
+        <div class="project-tags">
+            <span class="project-tag">Front-End Dev</span>
+            <span class="project-tag">Online learning Platform</span>
+            <span class="project-tag">Test Yourself</span>
+            <span class="project-tag">Real-time</span>
+        </div>
+
+        <div class="project-features">
+            <div class="feature-item">
+                <i class="fas fa-code"></i>
+                <span>Get to know urself</span>
+            </div>
+            <div class="feature-item">
+                <i class="fas fa-bolt"></i>
+                <span>Fast Performance</span>
+            </div>
+            <div class="feature-item">
+                <i class="fas fa-shield-alt"></i>
+                <span>Secure Environment</span>
+            </div>
+        </div>
+
+        <div class="project-links">
+            <a href="https://trackmytrek.vercel.app/" class="project-link">
+                <i class="fas fa-external-link-alt"></i> Live Link
+            </a>
+        </div>
+    </div>
+</div>
     <div class="project-card">
         <div class="project-image">
             <img src="images/project3.png" alt="Weather App" />
